TASK-24966 prepare 6.0 configuration